--- a/src/views/nav.ejs
+++ b/src/views/nav.ejs
@@ -52,6 +52,12 @@
                             <span>Admin log</span>
                         </a>
                     </li>
+                    <li>
+                        <a class="dropdown-item" href="/viewrank">
+                            <i class="fa fa-line-chart nav-icon" aria-hidden="true"></i>
+                            <span>View count rank</span>
+                        </a>
+                    </li>
                 </ul>
             </li>
         </ul>
