--- a/src/views/pages/recentchanges.html
+++ b/src/views/pages/recentchanges.html
@@ -18,7 +18,7 @@
                 <th scope='col'>Username</th>
                 <th scope='col'>Change made</th>
                 <th scope='col'>Comment</th>
-                <th scope='col'>Timestamp</th>
+                <th scope='col'>Date</th>
             </tr>
         </thead>
         <tbody id = 'rclist'>
