--- a/src/public/css/ren.css
+++ b/src/public/css/ren.css
@@ -32,6 +32,14 @@ a
 {
     color: inherit;
 }
+.ren_nosuchpage
+{
+    color: red;
+}
+.ren_nosuchpage:hover
+{
+    color: darkred;
+}
 
 .ren-extlink
 {
@@ -65,10 +73,12 @@ p:empty
 {
     display: table;
     width: auto;
-    border-left: 5px solid #7aa7d6;
-    padding-left: 16px;
-    padding-right: 16px;
+    border: 1px solid #dee2e6;
+    border-left: 5px solid #7aa7d6 !important;
+    /*padding-left: 16px;
+    padding-right: 16px;*/
     background-color: #f5f5f5;
+    margin: 1rem 0;
 }
 .ren-quote, .ren-quote > table, .ren-quote > tbody, .ren-quote > tr
 {
@@ -81,10 +91,15 @@ p:empty
 
     padding-top: 8px;
     padding-bottom: 8px;
+
+    padding-right: 16px;
+    padding-left: 16px;
 }
 .ren-quote-icon
 {
     vertical-align: top;
     color: silver;
     font-size: 28px;
+
+    padding-right: 16px;
 }
