--- a/src/views/pages/recentchanges.html
+++ b/src/views/pages/recentchanges.html
@@ -25,5 +25,5 @@
         </tbody>
     </table>
 </div>
-<script src='/lib/moment.js'></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src='/js/readRC.js'></script>
