--- a/src/views/outline.ejs
+++ b/src/views/outline.ejs
@@ -24,6 +24,7 @@
                         <% } %>
                     </div>
                     <div style='clear: both'></div>
+                    <%- include('IEalert') %>
                     <!-- Notifications-->
                     <% if (locals.notification) { %>
                         <div class="alert alert-danger" role="alert">
