--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -1,6 +1,6 @@
 <meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
-<meta name="google" content="notranslate" />
+<meta name='google' content='notranslate'>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/js/bootstrap.bundle.min.js" integrity="sha512-72WD92hLs7T5FAXn3vkNZflWG6pglUDDpm87TeQmfSg8KnrymL2G30R7as4FmTwhgu9H7eSzDCX3mjitSecKnw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -15,4 +15,5 @@
 <script src='/js/searchautocomplete.js'></script>
 <script src='/js/rcsidebar.js'></script>
 <script src='/js/scroll.js'></script>
+<script src='/js/iealert.js'></script>
 <title><%= title %> - <%= global.appname %></title>
