--- a/src/views/files/upload.ejs
+++ b/src/views/files/upload.ejs
@@ -8,7 +8,7 @@
                 <input class="form-control" maxlength=5 id='captchaIn' name='captcha' type="text" style='width:100px' autocomplete='off'>
             </div>
         </div>
-        <small class='form-text text-muted'>For spam protection, please type <b>five</b> characters shown above.</small>
+        <small class='form-text text-muted'>For spam protection, please type <b>four</b> characters shown above.</small>
     </div>
     <div class='form-group mb-2'>
         <label for='filenameInputBox'>Filename</label>
