--- a/src/views/nav.ejs
+++ b/src/views/nav.ejs
@@ -100,7 +100,7 @@
         <!-- search box -->
         <form class="input-group d-flex" action='/search' method='POST' id='searchBox'>
             <input class="form-control" id='searchinput' name='pagename' type="search" placeholder="Type page name to open..." aria-label="Page name to open">
-            <button class="btn btn-outline-light bg-primary" type="subimt"><i class="fa fa-arrow-right text-light" aria-hidden="true"></i></button>
+            <button class="btn btn-outline-light bg-primary" type="submit"><i class="fa fa-arrow-right text-light" aria-hidden="true"></i></button>
             <!-- <button class="btn btn-outline-light" type="submit">Open</button> -->
         </form>
     </div>
