--- a/src/views/pages/search.ejs
+++ b/src/views/pages/search.ejs
@@ -1,4 +1,4 @@
-<p class='fw-bold'>Looking for <a href='/w/<%= searchtitle %>'>edit page</a>?</p>
+<p class='fw-bold'>Looking for <a href='/edit/<%= searchtitle %>'>edit page</a>?</p>
 <ul class="list-group list-group-flush">
     <% for (let i = 0; i < results.length; i++) { %>
         <li class="list-group-item">
