--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -15,5 +15,6 @@
 <script src='/js/searchautocomplete.js'></script>
 <script src='/js/rcsidebar.js'></script>
 <script src='/js/scroll.js'></script>
+<script src='/js/sato.js'></script>
 <script src='/js/iealert.js'></script>
 <title><%= title %> - <%= global.appname %></title>
