--- a/src/views/pages/revert.ejs
+++ b/src/views/pages/revert.ejs
@@ -17,7 +17,7 @@
                 <input class="form-control" maxlength=5 id='captchaIn' name='captcha' type="text" style='width:100px' autocomplete='off'>
             </div>
         </div>
-        <small class='form-text text-muted'>For spam protection, please type <b>five</b> characters shown above.</small>
+        <small class='form-text text-muted'>For spam protection, please type <b>four</b> characters shown above.</small>
     </div>
     <button type='submit' type='button' class='btn btn-primary mt-3'>Revert</button>
 </form>
