--- a/src/views/pages/edit.ejs
+++ b/src/views/pages/edit.ejs
@@ -20,12 +20,12 @@
                 <input class="form-control" maxlength=5 id='captchaIn' name='captcha' type="text" style='width:100px' autocomplete='off'>
             </div>
         </div>
-        <small class='form-text text-muted'>For spam protection, please type <b>five</b> characters shown above.</small>
+        <small class='form-text text-muted'>For spam protection, please type <b>four</b> characters shown above.</small>
     </div>
     <% if (locals.username === undefined) { %>
     <p><span class='text-danger fw-bold'>WARNING!</span>    You are NOT logged in. Your IP address will be PERMANENTLY logged and will be visible to everyone. (비로그인 상태로 당신의 IP 주소가 영구히 기록되어 공개될 것입니다.)</p>
     <% } %>
-    <p><span class='text-danger fw-bold'>WARNING!</span>    DO NOT save copyrighted materials without permission. (저작권이 존재하는 내용을 허가 없이 저장하지 마십시오.) <%= global.copyrightNotice %></p>
+    <p><span class='text-danger fw-bold'>WARNING!</span>    <%= global.copyrightNotice %></p>
     <button type='submit' type='button' class='btn btn-primary mt-3'>Save</button>
     <button type='button' class='btn btn-secondary mt-3' onclick='previewButtonClick()'>Preview</button>
     <% } %>
