--- a/src/views/pages/move.ejs
+++ b/src/views/pages/move.ejs
@@ -19,7 +19,7 @@
                 <input class="form-control" maxlength=5 id='captchaIn' name='captcha' type="text" style='width:100px' autocomplete='off'>
             </div>
         </div>
-        <small class='form-text text-muted'>For spam protection, please type <b>five</b> characters shown above.</small>
+        <small class='form-text text-muted'>For spam protection, please type <b>four</b> characters shown above.</small>
     </div>
     <% if (locals.username === undefined) { %>
     <p><span class='text-danger fw-bold'>WARNING!</span>    You are NOT logged in. Your IP address will be PERMANENTLY logged and will be visible to everyone.</p>
