--- a/src/views/user/settings.ejs
+++ b/src/views/user/settings.ejs
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card mb-3">
     <div class="card-body">
         <h5 class="card-title">Set sign</h5>
         <p class="card-text">You can set sign to use. The default format is only displaying user name. Date and Time will be automatically appended when you sign.</p>
@@ -16,6 +16,38 @@
                 </div>
             </div>
             <button type='submit' class='btn btn-primary'>Save</button>
+        </form>
+    </div>
+</div>
+<div class="card mb-3">
+    <div class="card-body">
+        <h5 class="card-title">Change password</h5>
+        <p class="card-text">You can change your current password.</p>
+        <form method='POST' action='/settings/changePassword'>
+            <input type='hidden' name='_csrf' value='<%= csrfToken %>'>
+            <div class='form-group mb-2'>
+                <label for='oldpassword'>Current Password</label>
+                <input type='password' name='oldpassword' class='form-control' id='oldpassword' placeholder='Enter Current Password' required>
+            </div>
+            <div class='form-group mb-2'>
+                <label for='passwordInputbox'>New Password</label>
+                <input type='password' name='password' class='form-control' id='passwordInputbox' placeholder='Enter New Password' required minlength='8' maxlength='255' onkeyup='pwMatchCheck();pwAppropriateCheck()'
+                pattern='^[A-Za-z\d$@$!%*?&^#_\-+=<>,./|]{8,255}$'>
+                <small class='form-text text-muted'>Passwords must be at least eight characters long.</small>
+                <small id='passwordbadlength' class='text-danger fw-bold' style='display: none'>Passwords should be 8 characters or longer, 255 characters or shorter.</small>
+                <small id='passwordbadchar' class='text-danger fw-bold' style='display: none'>Your password contains illegal characters: <small id='passwordbadcharlist'></small></small>
+            </div>
+            <div class='form-group mb-2'>
+                <label for='passwordConfirmInputbox'>Confirm Password</label>
+                <input type='password' name='passwordConfirm' class='form-control' id='passwordConfirmInputbox' area-describedby='passwordConfirmDesc' placeholder='Re-enter password' required minlength='9' maxlength='255' onkeyup='pwMatchCheck()'>
+                <p>
+                    <small id='passwordmatch' class='text-success fw-bold' style='display: none'>Passwords match.</small>
+                    <small id='passwordnotmatch' class='text-danger fw-bold' style='display: none'>Passwords do not match.</small>
+                </p>
+                <small id='passwordConfirmDesc' class='form-text text-muted'>In order to ensure that you have entered your password correctly, please type it one more time.</small>
+            </div>
+            <script src='/js/signupPasswordCheck.js'></script>
+            <button type='submit' class='btn btn-primary'>Change password</button>
         </form>
     </div>
 </div>
