--- a/src/views/user/signup.ejs
+++ b/src/views/user/signup.ejs
@@ -10,22 +10,11 @@
         </div>
         <div class='form-group mb-2'>
             <label for='passwordInputbox'>Password</label>
-            <input type='password' name='password' class='form-control' id='passwordInputbox' placeholder='Enter Password' required minlength='9' maxlength='255' onkeyup='pwMatchCheck()'
-            pattern='^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&^#_\-+=<>,.?/|])[A-Za-z\d$@$!%*?&^#_\-+=<>,./|]{8,255}$'>
-            <small class='form-text text-muted'>
-                Passwords must:
-                <ul>
-                    <ol>be at least 9 characters long,</ol>
-                    <ol>be at most 255 characters long,</ol>
-                    <ol>have at least one lowercase letter,</ol>
-                    <ol>have at least one uppercase letter,</ol>
-                    <ol>have at least one number,</ol>
-                    <ol>
-                        and have at least one special character.
-                        <p><i>Special characters are: ! @ # $ % ^ & * &lt; &gt; - _ + = / | . , ? </i></p>
-                    </ol>
-                </ul>
-            </small>
+            <input type='password' name='password' class='form-control' id='passwordInputbox' placeholder='Enter Password' required minlength='8' maxlength='255' onkeyup='pwMatchCheck();pwAppropriateCheck()'
+            pattern='^[A-Za-z\d$@$!%*?&^#_\-+=<>,./|]{8,255}$'>
+            <small class='form-text text-muted'>Passwords must be at least eight characters long.</small>
+            <small id='passwordbadlength' class='text-danger fw-bold' style='display: none'>Passwords should be 8 characters or longer, 255 characters or shorter.</small>
+            <small id='passwordbadchar' class='text-danger fw-bold' style='display: none'>Your password contains illegal characters: <small id='passwordbadcharlist'></small></small>
         </div>
         <div class='form-group mb-2'>
             <label for='passwordConfirmInputbox'>Confirm Password</label>
