--- a/src/views/nav.ejs
+++ b/src/views/nav.ejs
@@ -7,28 +7,28 @@
             <li class="nav-item">
                 <a class="nav-link active" href="/RecentChanges">
                     <i class="fa fa-refresh nav-icon" aria-hidden="true"></i>
-                    <span class='d-none d-lg-inline'>RecentChanges</span>
+                    <span class='d-none d-xl-inline'>RecentChanges</span>
                 </a>
             </li>
             <!-- rd -->
             <li class="nav-item">
                 <a class="nav-link active" href="/RecentDiscuss">
                     <i class="fa fa-comments nav-icon" aria-hidden="true"></i>
-                    <span class='d-none d-lg-inline'>RecentDiscuss</span>
+                    <span class='d-none d-xl-inline'>RecentDiscuss</span>
                 </a>
             </li>
             <!-- RandomPage -->
             <li class="nav-item">
                 <a class="nav-link active" href="/RandomPage">
                     <i class="fa fa-random" aria-hidden="true"></i>
-                    <span class='d-none d-lg-inline'>RandomPage</span>
+                    <span class='d-none d-xl-inline'>RandomPage</span>
                 </a>
             </li>
             <!-- toolbox -->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle active" href="#" id="navbarTools" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="fa fa-gear nav-icon" aria-hidden="true"></i>
-                    <span class='d-none d-lg-inline'>Tools</span>
+                    <span class='d-none d-xl-inline'>Tools</span>
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarTools" style='position: absolute'>
                     <!-- pagelist-->
@@ -56,13 +56,19 @@
                         <!-- Admin log -->
                         <a class="dropdown-item" href="/adminlog">
                             <i class="fa fa-history nav-icon" aria-hidden="true"></i>
-                            <span>Admin log</span>
+                        <span>Admin log</span>
                         </a>
                     </li>
                     <li>
                         <a class="dropdown-item" href="/viewrank">
                             <i class="fa fa-line-chart nav-icon" aria-hidden="true"></i>
                             <span>View count rank</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="/Licence">
+                            <i class="fa fa-check nav-icon" aria-hidden="true"></i>
+                            <span>Licence</span>
                         </a>
                     </li>
                 </ul>
