--- a/src/views/pages/histories.ejs
+++ b/src/views/pages/histories.ejs
@@ -25,7 +25,7 @@
                 <th scope='col'>Change made</th>
                 <th scope='col'>Comment</th>
                 <th scope='col'>Date</th>
-                <th scope='col'></th>
+                <th scope='col' style='width: 160px'></th>
             </tr>
         </thead>
         <tbody>
