--- a/src/views/threads/RecentDiscuss.ejs
+++ b/src/views/threads/RecentDiscuss.ejs
@@ -1,13 +1,6 @@
-<div class="dropstart">
-    <button class="btn btn-secondary dropdown-toggle float-end" type="button" id="rcshowNDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-      Show...
-    </button>
-    <ul class="dropdown-menu" aria-labelledby="rcshowNDropdown">
-      <li><a class="dropdown-item" href="/RecentDiscuss?show=5">Show 5</a></li>
-      <li><a class="dropdown-item" href="/RecentDiscuss?show=10">Show 10</a></li>
-      <li><a class="dropdown-item" href="/RecentDiscuss?show=30">Show 30</a></li>
-      <li><a class="dropdown-item" href="/RecentDiscuss?show=100">Show 100</a></li>
-    </ul>
+<div style='float:right'>
+    <a class='btn btn-primary' href='/RecentDiscuss?isopen=true' role='button'>Open</a>
+    <a class='btn btn-secondary' href='/RecentDiscuss?isopen=false' role='button'>Closed</a>
 </div>
 <div style='clear:both'></div>
 <div style='overflow-x: auto'>
