--- a/src/views/IEalert.ejs
+++ b/src/views/IEalert.ejs
@@ -3,5 +3,5 @@
         <i class='fa fa-exclamation-triangle'></i>
         Internet Explorer is not supported.
     </h4>
-    <div>Please use newer (and better) browsers such as Firefox and Chrome.</div>
+    <div>Please use newer (and better) browsers such as Firefox or Chrome.</div>
 </div>
