--- a/src/views/fileTools.ejs
+++ b/src/views/fileTools.ejs
@@ -1,5 +1,5 @@
 <!-- pageTools.ejs: edit, delete, move...-->
-<div class="w-auto btn-group mt-3" id='pageTools' role="group" aria-label="Basic outlined example">
+<div class="w-auto btn-group mt-3" id='pageTools' role='group'>
   <a href="/file/<%= title %>" class="btn btn-outline-primary">View</a>
   <a href='/deletefile/<%= title %>' class="btn btn-outline-primary">Delete</a>
 </div>
