--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -1,6 +1,6 @@
 <footer id='footer' class='bg-light text-center p-3 mt-auto'>
     <div>Powered by <a href='/Licence'>AkariEngine</a></div>
-    <div>Contents are licensed under <%= global.license %> unless specified otherwise.</div>
+    <div>Contents are licensed under <%= global.license %> unless otherwise specified.</div>
     <div>본 웹사이트의 내용은 별도로 명시된 경우를 제외하고 <%= global.license %> 라이선스 하에 배포됩니다.</div>
     <div><a href='mailto:admin@gecwiki.kr'>Contact</a> | <a href='/Licence'>Licence</a> | <a href='/w/GECWiki:개인정보처리방침'>개인정보처리방침</a> | <a href='/w/GECWiki:규칙'>규칙</a> | <a href='/w/GECWiki:면책 조항'>면책 조항</a> | <a href='/noEmail'>이메일 주소 무단 수집 거부</a></div>
 </footer>
