--- a/src/public/css/mainview.css
+++ b/src/public/css/mainview.css
@@ -1,9 +1,3 @@
-/*
-html
-{
-    font-family: Noto Sans CJK KR, arial, 나눔고딕, 나눔바른고딕, NanumGothic, 맑은고딕, 'Malgun Gothic', 'Apple SD Gothic Neo', sans-serif !important;
-}
-*/
 .article-wrapper
 {
     /*I don't know what to put here*/
@@ -47,6 +41,13 @@ html
 .nav-item
 {
     margin-right: 15px;
+}
+.category
+{
+    padding: 0.5rem 1rem;
+    border-radius: 0.25rem;
+    border: 1px solid rgba(0,0,0, 0.125);
+    margin-bottom: 1em;
 }
 
 #rcsidebar > ul
