--- a/src/views/pageTools.ejs
+++ b/src/views/pageTools.ejs
@@ -1,5 +1,4 @@
-<!-- pageTools.ejs: edit, delete, move...-->
-<div class="w-auto btn-group mt-3" id='pageTools' role="group" aria-label="Basic outlined example">
+<div class="w-auto btn-group mt-2" id='pageTools' role="group">
   <a href='/w/<%= pagename %>' class='btn btn-outline-primary'>Page</a>
   <a href='/edit/<%= pagename %>' class="btn btn-outline-primary">Edit</a>
   <a href="/threads/<%= pagename %>" class="btn btn-outline-primary">Discuss</a>
