--- a/src/public/css/mainview.css
+++ b/src/public/css/mainview.css
@@ -1,8 +1,12 @@
+body
+{
+    background-color: #f5f5f5;
+}
 .article-wrapper
 {
-    /*I don't know what to put here*/
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 75px;
+    margin-bottom: 50px;
+    background-color: white;
 }
 @media (max-width: 1200px)
 {
@@ -54,6 +58,11 @@
 {
     margin-right: 15px;
 }
+.nav-link
+{
+    color: white !important;
+}
+
 .category
 {
     padding: 0.5rem 1rem;
