--- a/src/public/css/rcsidebar.css
+++ b/src/public/css/rcsidebar.css
@@ -1,9 +1,10 @@
 #rcsidebar
 {
+    background-color: white;
     float: right;
     position: relative;
     width: 200px;
-    margin-top: 100px;
+    margin-top: 75px;
 }
 .article-wrapper
 {
