--- a/src/views/nav.ejs
+++ b/src/views/nav.ejs
@@ -5,21 +5,21 @@
         <ul class="navbar-nav me-auto mb-lg-0" style='flex-direction: row;'>
             <!-- rc -->
             <li class="nav-item">
-                <a class="nav-link active" href="/RecentChanges">
+                <a class="nav-link" href="/RecentChanges">
                     <i class="fa fa-refresh nav-icon" aria-hidden="true"></i>
                     <span class='d-none d-xl-inline'>RecentChanges</span>
                 </a>
             </li>
             <!-- rd -->
             <li class="nav-item">
-                <a class="nav-link active" href="/RecentDiscuss">
+                <a class="nav-link" href="/RecentDiscuss">
                     <i class="fa fa-comments nav-icon" aria-hidden="true"></i>
                     <span class='d-none d-xl-inline'>RecentDiscuss</span>
                 </a>
             </li>
             <!-- RandomPage -->
             <li class="nav-item">
-                <a class="nav-link active" href="/RandomPage">
+                <a class="nav-link" href="/RandomPage">
                     <i class="fa fa-random" aria-hidden="true"></i>
                     <span class='d-none d-xl-inline'>RandomPage</span>
                 </a>
