--- a/src/views/rc.ejs
+++ b/src/views/rc.ejs
@@ -1,7 +1,7 @@
 <aside>
     <div id='rcsidebar' class='row border rounded'>
         <div class='pb-2 mt-2 border-bottom'>
-            <a href='/RecentChanges'><span class='fw-bold' style='color:black;'>RecentChanges</span> <i class="fa fa-external-link-square ren-extlink-icon" aria-hidden="true"></i></a>
+            <a href='/RecentChanges'><span class='fw-bold' style='color:black;'>RecentChanges</span> <i class="fas fa-external-link-square-alt ren-extlink-icon"></i></a>
         </div>
         <ul class="list-group list-group-flush" id='rcsidebarcontents'>
         </ul>
