--- a/src/public/css/mainview.css
+++ b/src/public/css/mainview.css
@@ -79,8 +79,23 @@ body
 #userIcon
 {
     position: absolute;
-    right: 10px;
+    right: 50px;
     float: right !important;
+}
+#navUserDropDown
+{
+    color: white;
+    font-size: 24px;
+}
+.userButton_username
+{
+    font-weight: bold;
+    padding: .25rem 1rem;
+}
+.identicon
+{
+    width: 38px;
+    height: 38px;
 }
 #searchBox
 {
