--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -10,6 +10,7 @@
             <input type='password' name='password' class='form-control' id='passwordInputbox'placeholder='Enter Password' required>
         </div>
         <div class='mb-2'>Do not have an account? <a href='/signup'>Create one!</a></div>
+        <div class='mb-2'>If you forgot your password, please <a href='mailto:admin@gecwiki.kr'>email to the Administrator</a>.</div>
         <button type='submit' class='btn btn-primary'>Login</button>
     </form>
 </div>
