--- a/src/public/css/ren.css
+++ b/src/public/css/ren.css
@@ -69,6 +69,11 @@ p:empty
     margin-bottom: 1rem !important;
 }
 
+.ren-header-edit
+{
+    font-size: 1rem;
+}
+
 .ren-table
 {
     width: auto;
