--- a/src/views/pages/edit.ejs
+++ b/src/views/pages/edit.ejs
@@ -1,7 +1,12 @@
 <link rel='stylesheet' href='/css/edit.css'>
 <script src='/js/editpreview.js'></script>
 <form action='/edit/<%= title %>' method='POST' class='editForm'>
+    <div class="alert alert-info" role="alert">
+        You are editing a section from the page.
+    </div>
     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+    <textarea name='editPrefix' style='display:none'><%= prefix %></textarea>
+    <textarea name='editSuffix' style='display:none'><%= suffix %></textarea>
     <div class='form-group'>
         <textarea class='form-control' id='editAreaBox' name='content' placeholder='Describe <%= title %> here...' <% if (locals.disabled) { %> disabled <% } %>><%= content %></textarea>
     </div>
